fix css to make table left aligned

--- a/static/orange.css
+++ b/static/orange.css
@@ -88,7 +88,6 @@ p {
 }
 #table_div {
 /*     border: 1px solid #bbb; */
-    text-align: center;
     display:inline-block;
 }
 
